--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porfoli VIP de Francesc - Dibuixos i il·lustracions del curs</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/godia.webp" type="image/webp">
+    <link rel="icon" href="images/dunocat.jpeg" type="image/jpeg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
