--- a/index.html
+++ b/index.html
@@ -158,6 +158,46 @@
 
                 </div>
 
+
+                <div class="logo-olimpiades" data-aos="fade-left">
+
+                    <h2 class="title">Logo per a les Olimpiades a la Grega</h2>
+
+                    <img src="images/logo-olimpiades.webp" alt="logo olimpiades">
+
+                </div>
+
+
+                <div class="mario" data-aos="fade-right">
+
+                    <h2 class="title">El món de Mario</h2>
+                    <h3 class="subtitle">Render 3D fet en Blender</h3>
+
+                    <img src="images/mario3.png" alt="render mario">
+
+                </div>
+
+                <div class="mario-video" data-aos="fade-left">
+
+                    <h2 class="title">El món de Mario (Animat)</h2>
+                    <h3 class="subtitle">Animació 3D feta en Blender</h3>
+
+                    <video controls autoplay>
+                        <source src="images/video-mario.webm" alt="video mario">
+                    </video>
+
+                </div>
+
+                <div class="cotxe" data-aos="fade-right">
+
+                    <h2 class="title">Coxtxe a la natura</h2>
+                    <h3 class="subtitle">Render 3D fet en Blender</h3>
+
+                    <img src="images/cotxe3.png" alt="render cotxe">
+
+                </div>
+                
+
             </div>
             
         </section>
