--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
 
                     <h2 class="title">El món de Mario (Animat)</h2>
                     <h3 class="subtitle">Animació 3D feta en Blender</h3>
+                    <h3 class="subtitle">Fes clic per reproduir</h3>
 
                     <video controls autoplay>
                         <source src="images/video-mario.webm" alt="video mario">
