--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <h2 class="title">El món de Mario</h2>
                     <h3 class="subtitle">Render 3D fet en Blender</h3>
 
-                    <img src="images/mario3.png" alt="render mario">
+                    <img src="images/mario3.webp" alt="render mario">
 
                 </div>
 
@@ -194,7 +194,7 @@
                     <h2 class="title">Coxtxe a la natura</h2>
                     <h3 class="subtitle">Render 3D fet en Blender</h3>
 
-                    <img src="images/cotxe3.png" alt="render cotxe">
+                    <img src="images/cotxe4.webp" alt="render cotxe">
 
                 </div>
                 
